--- a/css/styles.css
+++ b/css/styles.css
@@ -130,9 +130,11 @@ body {
   margin-right: 50px;
   padding: 32px 0;
 }
-.text :last-child {
+
+/* .text :last-child {
   margin-right: 0;
-}
+} */
+
 .contact-text-list {
   font-size: 14px;
   font-weight: 500;
@@ -150,8 +152,8 @@ body {
 .hero-img {
   max-width: 1600px;
   height: 600px;
-  margin-left: 0;
-  margin-right: 0;
+  margin-left: auto;
+  margin-right: auto;
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/imghero.jpg);
 
   background-repeat: no-repeat;
@@ -217,6 +219,16 @@ body {
 .section-info {
   padding-top: 94px;
   padding-bottom: 94px;
+}
+
+.adventages-top {
+  width: 75px;
+  height: 75px;
+  background-color: #188ce8;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .item-info {
@@ -450,11 +462,18 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--text-color-secondary);
+
+  display: flex;
+  align-items: center;
 }
 
 .text-mail:hover,
 .text-mail:focus {
   color: var(--accent-color);
+}
+
+.icon-mail-one {
+  margin-right: 10px;
 }
 
 .text-tel {
