--- a/css/styles.css
+++ b/css/styles.css
@@ -222,9 +222,11 @@ body {
 }
 
 .adventages-top {
-  width: 75px;
-  height: 75px;
-  background-color: #188ce8;
+  width: 270px;
+  height: 120px;
+  background: #f5f4fa;
+  border-radius: 4px;
+  margin-bottom: 30px;
 
   display: flex;
   align-items: center;
