--- a/css/styles.css
+++ b/css/styles.css
@@ -320,6 +320,35 @@ body {
   border-radius: 0px 0px 4px 4px;
 }
 
+.icon-list-section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.icon-list-team {
+  width: 44px;
+  height: 44px;
+  margin-right: 10px;
+}
+.icon-list-team:not(:last-child) {
+  margin-right: 10px;
+}
+
+.icon-list {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--background-color);
+  fill: var(--text-color-secondary);
+}
+
+.icon-list:hover .icon-list:focus {
+  background: var(--accent-color);
+}
+
 .section-team {
   background-color: #f5f4fa;
 }
@@ -352,6 +381,7 @@ body {
   letter-spacing: 0.03em;
   color: var(--text-color-secondary);
   text-align: center;
+  margin-bottom: 16px;
 }
 
 /* Футер */
