--- a/css/styles.css
+++ b/css/styles.css
@@ -384,6 +384,48 @@ body {
   margin-bottom: 16px;
 }
 
+/* Наши клиенты */
+
+.section-clients {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.title-hedding {
+  margin-bottom: 50px;
+}
+.heading-clients {
+  text-align: center;
+}
+.clients-list-text {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 30px;
+}
+.clients-icon {
+  display: block;
+}
+
+.heading-clients {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  letter-spacing: 0.03em;
+  color: var(--text-color-main);
+}
+.clients-list {
+  margin-top: 50px;
+  width: 170px;
+  height: 92px;
+  border: 1px solid #afb1b8;
+  box-sizing: border-box;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 /* Футер */
 .footer-list {
   padding-top: 60px;
@@ -544,6 +586,10 @@ body {
 .portfolio-btn:last-child {
   margin-right: 0;
 }
+.list-button:hover,
+.list-button:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
 
 .list-button {
   font-family: Roboto, sans-serif;
@@ -598,6 +644,15 @@ body {
   border: 1px solid #eeeeee;
   box-sizing: border-box;
 }
+
+.portfolio-list:hover,
+.portfolio-list:focus {
+  background: #ffffff;
+  border: 1px solid #eeeeee;
+  box-sizing: border-box;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
 .portfolio-title {
   font-weight: 700;
   font-size: 18px;
