--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
   --text-color-main: #212121;
   --text-color-secondary: #757575;
   --footer-text-color: #2f303a;
+  --svg-color: #afb1b8;
 }
 
 *,
@@ -229,6 +230,7 @@ body {
 }
 
 .hero-title {
+  margin-bottom: 30px;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -251,7 +253,6 @@ body {
   border: none;
   border-radius: 4px;
 
-  margin-top: 30px;
   width: 200px;
   height: 50px;
   display: block;
@@ -394,7 +395,7 @@ body {
   align-items: center;
   justify-content: center;
   background-color: var(--background-color);
-  color: var(--text-color-secondary);
+  color: var(--svg-color);
 }
 
 .icon-list:hover,
@@ -406,12 +407,9 @@ body {
 .team-svg {
   fill: currentColor;
 }
-.icon-list-icon {
-  background-color: var(--accent-color);
-}
 
 .section-team {
-  /* background-color: #f5f4fa; */
+  background-color: #f5f4fa;
 }
 
 .item-text-box {
@@ -483,7 +481,7 @@ body {
   height: 92px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
-  color: var(--text-color-secondary);
+  color: var(--svg-color);
 }
 .clients-icon:hover,
 .clients-icon:focus {
@@ -595,7 +593,7 @@ body {
   letter-spacing: 0.03em;
   color: var(--background-color);
   text-transform: uppercase;
-  margin-bottom: 32px;
+  margin-bottom: 20px;
 }
 
 .footer-icon-list {
@@ -628,10 +626,6 @@ body {
 
 .footer-svg {
   fill: var(--background-color);
-}
-
-.footer-svg-icon {
-  background-color: var(--accent-color);
 }
 
 /* Страница 2 */
@@ -704,7 +698,6 @@ body {
 /* Работы */
 
 .container-item-title {
-  margin-top: 50px;
   margin-left: 0;
   margin-right: 0;
 
@@ -713,6 +706,9 @@ body {
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
+}
+.btn-all {
+  margin-bottom: 56px;
 }
 
 .portfolio-text-box {
